--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-query": "^5.76.0",
+    "axios": "^1.9.0",
     "daisyui": "^5.0.35",
+    "firebase": "^11.7.1",
     "lightningcss": "^1.29.3",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.56.3",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.6.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
