--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "daisyui": "^5.0.35",
     "firebase": "^11.7.1",
+    "framer-motion": "^12.11.0",
     "lightningcss": "^1.29.3",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.1",
